--- a/ng-app/src/app/course/list-course/list-course.component.html
+++ b/ng-app/src/app/course/list-course/list-course.component.html
@@ -1,6 +1,6 @@
 <div class="row" *ngIf="result === 'addSuccess'">
   <div class="alert alert-success" role="alert">
-    <strong>Well done!!</strong> Add new Student Success
+    <strong>Well done!!</strong> Add new Course Success
   </div>
 </div>
 <div class="row">
